# DimaTech

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
migrations/: init.sql
src/: main.py
src/api/v1/: admin.py  paymant.py  routes.py  user.py
src/core/: settings.py
src/db/postgres/: account_repository.py  admin_repository.py  amount_repository.py  connection.py  models.py  paymant_repository.py  user_repository.py
src/models/: account.py  amount.py  paymant.py  user.py
src/services/: admin_service.py  paymant_service.py  user_service.py
